# vdr-plugin-robotv

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  env
.github/workflows/: docker-build-dev-branch.yaml  release.yaml
config/: robotv.conf
docker/: Dockerfile  Dockerfile.arm32v7  Dockerfile.arm64v8  README.md  build-arm32v7.sh  build-arm64v8.sh  build.sh  run.sh  satip.sh
docker/example/: run-container.sh  run-dry.sh  run.sh
docker/hooks/: post_push
docker/includes/: cpu.arm32v7  cpu.arm64v8  cpu.x86_64  robotv.build  robotv.env  robotv.image
docker/patches/satip/: disable-server-timeout.patch
docker/patches/vdr/: Makefile.patch  eitscan-only-last-device.patch
docker/templates/: Make.config  channels.conf  scr.conf
robotv/: robotv.conf
src/config/: config.cpp  config.h
src/db/: database.cpp  database.h  storage.cpp  storage.h
src/demuxer/: CMakeLists.txt  aaccommon.h  ac3common.h  demuxer.cpp  demuxer.h  demuxer_AC3.cpp  demuxer_AC3.h  demuxer_ADTS.cpp  demuxer_ADTS.h  demuxer_H264.cpp  demuxer_H264.h  demuxer_H265.cpp  demuxer_H265.h  demuxer_LATM.cpp  demuxer_LATM.h  demuxer_MPEGAudio.cpp  demuxer_MPEGAudio.h  demuxer_MPEGVideo.cpp  demuxer_MPEGVideo.h  demuxer_PES.cpp  demuxer_PES.h  demuxer_Subtitle.cpp  demuxer_Subtitle.h  demuxerbundle.cpp  demuxerbundle.h  parser.cpp  parser.h  pes.h  streambundle.cpp  streambundle.h  streaminfo.cpp  streaminfo.h
src/demuxer/include/robotvdmx/: demuxer.h  demuxerbundle.h  pes.h  streambundle.h  streaminfo.h
src/demuxer/src/: demuxer.cpp  demuxerbundle.cpp  streambundle.cpp  streaminfo.cpp
src/demuxer/src/parsers/: parser.cpp  parser.h  parser_ac3.cpp  parser_ac3.h  parser_adts.cpp  parser_h264.cpp  parser_h264.h  parser_h265.cpp  parser_h265.h  parser_latm.cpp  parser_latm.h  parser_mpegaudio.cpp  parser_mpegvideo.cpp  parser_mpegvideo.h  parser_pes.cpp  parser_pes.h  parser_subtitle.cpp  parser_subtitle.h
src/demuxer/src/upstream/: bitstream.cpp  bitstream.h  ringbuffer.cpp  ringbuffer.h
src/epg/: epghandler.cpp  epghandler.h
src/live/: channelcache.cpp  channelcache.h  livequeue.cpp  livequeue.h  livestreamer.cpp  livestreamer.h
src/net/: msgpacket.cpp  msgpacket.h  os-config.cpp  os-config.h  sdp-avahi.cpp  sdp-avahi.h  sdp-dummy.h  sdp.cpp  sdp.h
src/recordings/: artwork.cpp  artwork.h  packetplayer.cpp  packetplayer.h  recordingscache.cpp  recordingscache.h  recplayer.cpp  recplayer.h
src/robotv/: StreamPacketProcessor.cpp  StreamPacketProcessor.h  robotv.cpp  robotv.h  robotvchannels.cpp  robotvchannels.h  robotvclient.cpp  robotvclient.h  robotvcommand.h  robotvserver.cpp  robotvserver.h  timerconflicts.cpp  timerconflicts.h
src/robotv/controllers/: artworkcontroller.cpp  artworkcontroller.h  channelcontroller.cpp  channelcontroller.h  controller.h  epgcontroller.cpp  epgcontroller.h  logincontroller.cpp  logincontroller.h  moviecontroller.cpp  moviecontroller.h  recordingcontroller.cpp  recordingcontroller.h  streamcontroller.cpp  streamcontroller.h  timercontroller.cpp  timercontroller.h
src/robotv/svdrp/: channelcmds.cpp  channelcmds.h
src/scanner/: wirbelscan.cpp  wirbelscan.h  wirbelscan_services.h
src/service/epgsearch/: services.h
src/tools/: hash.cpp  hash.h  recid2uid.cpp  recid2uid.h  time.cpp  time.h  urlencode.cpp  urlencode.h  utf8conv.cpp  utf8conv.h
src/tools/utf8/: checked.h  core.h  unchecked.h
src/xvdr/: timerconflicts.cpp  timerconflicts.h  xvdr.cpp  xvdr.h  xvdrchannels.cpp  xvdrchannels.h  xvdrclient.cpp  xvdrclient.h  xvdrcommand.h  xvdrserver.cpp  xvdrserver.h
tools/: serviceref.c
